--- a/README
+++ b/README
@@ -1,1 +1,31 @@
+#Introduction
 Source code and sample data for classify trunk surface defects 
+
+## Dependencies
+The program uses some C++ 11 feature, so we recommend the use of gcc 4.7 or later to compile. The program requires these libraries to be installed:
+
+###### Boost 1.46 or later
+
+###### DGtal version 0.9 or later. To install DGtal see [DGtal installation] (https://github.com/DGtal-team/DGtal/blob/master/README.md)
+
+###### PCL version 1.7 or later
+
+###### Eigen3
+
+###### OpenCV 3.4 or later
+
+###### GNU GSL 
+
+###### CMake 2.6 or later
+
+## Install (Linux only)
+
+```
+cd Classification 
+mkdir build
+cd build
+cmake ..  -DDGtal_DIR=/path/to/DGtal
+make
+```
+#User guide
+- Coming soon
